crates/pound/tests/ui/unknown_conflict.stderr
error: pound: conflicts_with: no field named `nope`
 --> tests/ui/unknown_conflict.rs:3:10
  |
3 | #[derive(Parse)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Parse` (in Nightly builds, run with -Z macro-backtrace for more info)
